# Proyecto

./: CMakeLists.txt  README.md  main.h
Resources/: Gramatica13.txt  Gramatica17.txt  Gramatica22.txt  Gramatica23.txt  gramatica2.txt
Source/: archivo.c  archivo.h  lista.c  lista.h  main.c  main.h
